--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,9 @@
 
 
 
-        <activity android:name=".NavigationMapRouteActivity"></activity>
+        <activity android:name=".NavigationMapRouteActivity">
+
+        </activity>
 
 
 
