--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_logo_app_prueba1"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/icono_app_av_512px"
         android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
@@ -42,11 +42,11 @@
             android:label=" "
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name=".Mapa_Repartidores"
@@ -103,11 +103,11 @@
             android:theme="@style/AppTheme.NoActionBar">
 
 
-                                    <!--<intent-filter>
+                                    <intent-filter>
                                         <action android:name="android.intent.action.MAIN" />
 
                                         <category android:name="android.intent.category.LAUNCHER" />
-                                    </intent-filter>-->
+                                    </intent-filter>
         </activity>
 
         <activity
