--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ repositories {
 
     maven { url 'https://mapbox.bintray.com/mapbox' }
 
-
+    maven { url "https://maven.google.com" }
 }
 
 dependencies {
@@ -67,6 +67,7 @@ dependencies {
 
     implementation 'androidx.navigation:navigation-ui:2.0.0'
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
