--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jumpi.repartidores_aplication">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -25,13 +24,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-
-
-
-
-
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -40,28 +32,16 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
-
-
-
-
-
-
-
-
         <activity
             android:name=".MapaGoogleRepartidoresActivity"
-            android:label="@string/title_activity_mapa_google_repartidores"></activity>
+            android:label="@string/title_activity_mapa_google_repartidores" />
         <activity
             android:name=".LoginActivity"
             android:label=""
@@ -124,15 +104,7 @@
             android:name=".Detalle_Faltante_Sobrante_Envases"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NavigationMapRouteActivity"></activity>
-
-
-
-
-
-
-
-        <!-- ########################## Para SUPERVISORES ########################### -->
+        <activity android:name=".NavigationMapRouteActivity" /> <!-- ########################## Para SUPERVISORES ########################### -->
         <activity
             android:name=".MainActivitySupervisores"
             android:label=" "
