--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jumpi.repartidores_aplication">
+
+
     <!-- ########################## PERMISOS #################################### -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -16,7 +18,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/icono_app_av_512px"
+        android:icon="@mipmap/logo_av_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
